- Added cumulative counters for server DB writer requests
- Fixed data corruption issues in ODBC and Oracle DB drivers
- Additional internal server metrics for monitoring DB activity and performance
- Added interface creation hook
- Improved System.InstalledProducts table handling on Windows
- Management console:
	- Object tool input fields can be rearranged
- Fixed issues: #205, #847, #948, #967, #979, #980, #991, #997, #1002, #1003, #1019, #1024


*
* 2.0-RC2
*

- Maintenance mode for nodes, clusters, and mobile devices (manual and scheduled)
- Fixed broken instance discovery filters
- Fixed agent crash when collecting SNMP data in cached mode
- Agent returns correct OS version on Windows 10
- New NXSL "Node" class attribute: bridgeBaseAddress
- One LDAP attribute can be used in multiple mappings
- Fied deadlock on LDAP user deletion while LDAP synchronization
- Add option to use encrypted password in password fileds in configuration files and in the server configuration parameters.
- Added SMS driver for web service text2reach.com
- SNMP sysContact and sysLocation collected and stored
- Server can accept traps and syslog messages from nodes in all zones (controlled by TrapSourcesInAllZones configuration option)
- On instance discovery pool instance name is updated if it has changed
- New SMS driver - slack.com
- IPv6 support in built-in syslog server
- Fixed event processing policy export/import issues
- Global default retention time and polling interval for data collection
- Initial support for scheduled tasks within system
- Scheduled file upload
- Management console:
	- Object context menu available on geo map
	- Filter in event template configurator
	- Web console use client time zone to display time
	- Added option to use server time zone to display time in console
	- Access to event log, SNMP trap log, and syslog from object context menu
	- Dashboards can be associated with other objects (nodes, containers, etc.) and opened from object's context menu